@@ -1,3 +1,8 @@
+2002-11-25  Aldy Hernandez  <aldyh@redhat.com>
+
+	* ppc-opc.c: Remove evmwlssf, evmwlssfa, evmwlsmf, evmwlsmfa,
+	evmwlssfaaw, evmwlsmfaaw, evmwlssfanw, evmwlsfanw.
+
 2002-12-04  Aldy Hernandez  <aldyh@redhat.com>
 
 	* ppc-opc.c (PMRN): Remove.
